<resources>
    <string name="app_name">Journey of Seed</string>
    <string name="app_description">A Journey of a Seed.</string>
    <string name="text_no_connection">Oop! there is no connection!</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>

    <!--permission-->
    <string name="title_permission">Permission Needed</string>
    <string name="take_camera_explanation">In order to take picture with camera, you needed this permission.</string>
    <string name="pick_picture_explanation">In order to pick picture from gallery, you needed this permission.</string>
    <string name="coarse_location_explanation">You don\'t need to grant this permission, however if you want to used weather data, you should grant this permission.</string>

    <!--item_list-->
    <string name="placeholder_name">Apple</string>
    <string name="placeholder_price">18.8</string>
    <string name="placeholder_amount">12</string>

    <!--dialog_add_item-->
    <string name="text_name_error">Name should not be empty</string>
    <string name="text_location_error">Location should not be empty</string>
    <string name="text_name_helper">Apple</string>
    <string name="text_location_helper">Highland</string>
    <string name="text_name_hint">Add the name of the plant</string>
    <string name="text_location_hint">Add the location of the plant</string>

    <!--local_search_option_menu-->
    <string name="text_search">Search</string>
    <string name="text_search_hint">Search the plant…</string>

</resources>
