<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDarkerGrey1"
    tools:context=".ui.InsertActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imv_image_insert"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:clickable="true"
        android:drawingCacheQuality="high"
        android:focusable="true"
        android:src="@drawable/placeholder_logo"
        app:civ_border_color="#FFfefefe"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--    <TextureView-->
    <!--        android:id="@+id/view_finder"-->
    <!--        android:layout_width="640px"-->
    <!--        android:layout_height="640px"-->
    <!--        app:layout_constraintBottom_toTopOf="@id/guideline2"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imv_camera_insert"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:drawingCacheQuality="high"
        android:focusable="true"
        android:src="@drawable/ic_photo_camera"
        app:civ_border_color="#FFfefefe"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toTopOf="@id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_photo_camera"
        tools:ignore="VectorDrawableCompat" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textinput_name_insert"
        style="@style/TextInputStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/text_name_hint"
        app:endIconMode="clear_text"
        app:helperText="@string/text_name_helper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_name_insert"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionNext"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textinput_location_insert"
        style="@style/TextInputStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/text_location_hint"
        app:endIconMode="clear_text"
        app:helperText="@string/text_location_helper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textinput_name_insert">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_location_insert"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionGo"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save_insert"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textinput_location_insert" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel_insert"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textinput_location_insert" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

</androidx.constraintlayout.widget.ConstraintLayout>